--- a/package.json
+++ b/package.json
@@ -10,14 +10,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.11.0",
     "expo": "~53.0.22",
+    "expo-dev-client": "~5.2.4",
     "expo-status-bar": "~2.2.3",
+    "lodash": "^4.17.21",
+    "native-base": "^3.4.28",
     "react": "19.0.0",
-    "react-native": "0.79.6",
-    "expo-dev-client": "~5.2.4"
+    "react-dom": "19.0.0",
+    "react-native": "0.79.5",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@expo/config-plugins": "~10.1.1",
+    "metro": "^0.82.0",
+    "metro-config": "^0.82.0",
+    "metro-resolver": "^0.82.0"
   },
   "private": true
 }
